--- a/index.html
+++ b/index.html
@@ -52,7 +52,81 @@
             <a href="#trending" class="down"><i class='bx bx-down-arrow-alt' ></i></a>
         </div>
     </section>
-    
+    <!--------PRODUCTOS TRENDING-------->
+    <section class="trending-products" id="trending">
+        <div class="center-text">
+            <h2>Los <span>productos</span> mas populares</h2>
+        </div>
+        <div class="products">
+            <!--------PRODUCTOS-------->
+            <div class="row">
+                <img src="images/B3.png" alt="">
+                <div class="product-text">
+                    <h5>A la venta</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart' ></i>
+                </div>
+                <div class="price">
+                    <h4>Sudadera marca Bling</h4>
+                    <p>$180.000 - $200.000</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="images/B3.png" alt="">
+                <div class="product-text">
+                    <h5>A la venta</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart' ></i>
+                </div>
+                <div class="price">
+                    <h4>Sudadera marca Bling</h4>
+                    <p>$180.000 - $200.000</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="images/B3.png" alt="">
+                <div class="product-text">
+                    <h5>A la venta</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart' ></i>
+                </div>
+                <div class="price">
+                    <h4>Sudadera marca Bling</h4>
+                    <p>$180.000 - $200.000</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="images/B3.png" alt="">
+                <div class="product-text">
+                    <h5>A la venta</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart' ></i>
+                </div>
+                <div class="price">
+                    <h4>Sudadera marca Bling</h4>
+                    <p>$180.000 - $200.000</p>
+                </div>
+            </div>
+            <div class="row">
+                <img src="images/B3.png" alt="">
+                <div class="product-text">
+                    <h5>A la venta</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart' ></i>
+                </div>
+                <div class="price">
+                    <h4>Sudadera marca Bling</h4>
+                    <p>$180.000 - $200.000</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--------REDES SOCIALES-------->
     <section class="contact">
         <div class="contact-info">
