--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
     <!--------CEBECERA-------->
     <header>
         <a href="#" class="logo"><img src="images/logo.png" alt="Logo tienda"></a>
-        <ul class="navmenu">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Tienda</a></li>
-            <li><a href="#">Contactenos</a></li>
-        </ul>
+        <div class="nav-icon menu-icon">
+            <a href="#"><i class="bx bx-menu" style='color:#ffffff' id="menu_icon"></i></a>
+        </div>
+        <nav class="navmenu">
+            <a href="#">Inicio</a>
+            <a href="#">Ofertas</a>
+            <a href="#">Tienda</a>
+            <a href="#">Contactenos</a>
+        </nav>
         <div class="nav-icon">
             <a href="#"><i class='bx bx-search' style='color:#ffffff'></i></a>
             <a href="#"><i class='bx bx-user' style='color:#ffffff'></i></a>
             <a href="#"><i class='bx bx-cart' style='color:#ffffff'></i></a>
-            <div class="bx bx-menu" style='color:#ffffff' id="menu_icon">
-
-            </div>
         </div>
     </header>
     <!--------MAIN-------->
@@ -70,8 +70,7 @@
                         <h2>Autum <span>Season</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quas consectetur cupiditate
                             suscipit facilis est reiciendis temporibus ea error quod fugit molestias ad, saepe, maxime
-                            delectus molestiae explicabo consequuntur commodi ipsum dolor sit amet consectetur adipisicing elit. Nihil quas consectetur cupiditate
-                            suscipit facilis est reiciendis temporibus ea error</p>
+                            delectus molestiae explicaboea error</p>
                         <button class="btn-more">Read more<i class='bx bx-chevron-right'></i></button>
                     </div>
                 </div>
@@ -81,8 +80,7 @@
                         <h2>Autum <span>Season</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quas consectetur cupiditate
                             suscipit facilis est reiciendis temporibus ea error quod fugit molestias ad, saepe, maxime
-                            delectus molestiae explicabo consequuntur commodi ipsum dolor sit amet consectetur adipisicing elit. Nihil quas consectetur cupiditate
-                            suscipit facilis est reiciendis temporibus ea error</p>
+                            delectus molestiae explicaboea error</p>
                         <button class="btn-more">Read more<i class='bx bx-chevron-right'></i></button>
                     </div>
                 </div>
@@ -93,7 +91,6 @@
                 <img src="images/B1.png" class="swiper-slide">
                 <img src="images/B2.jpg" class="swiper-slide">
                 <img src="images/B3.jpg" class="swiper-slide">
-                <img src="images/B1.png" class="swiper-slide">
             </div>
         </div>
     </section>
@@ -163,35 +160,28 @@
     <!--------REDES SOCIALES-------->
     <section class="contact">
         <div class="contact-info">
-            <div class="first-info">
-                <img src="images/logo.png" alt="">
-                <p>4134 Gran avenida las palmas, <br>Bogotá Cundinamarca 51356</p>
-                <p>310950673</p>
-                <p>kickhub45@gmail.com</p>
+            <h4>Quick links</h4>
+        </div>
+        <div class="contact-info">
+            <nav class="navmenu">
+                <a href="#">Inicio</a>
+                <a href="#">Ofertas</a>
+                <a href="#">Tienda</a>
+                <a href="#">Contactenos</a>
+            </nav>
+        </div>
+        <div class="contact-info">
+            <div class="social-info">
+                <div class="input-email">
+                    <h4>Suscribe to Email:</h4>
+                    <input type="email" placeholder="Email">
+                </div>
                 <div class="social-icon">
                     <a href="#"></a><i class='bx bxl-facebook-circle'></i>
                     <a href="#"></a><i class='bx bxl-twitter'></i>
                     <a href="#"></a><i class='bx bxl-instagram'></i>
                     <a href="#"></a><i class='bx bxl-youtube'></i>
                 </div>
-            </div>
-            <div class="second-info">
-                <h4>Soporte</h4>
-                <p>Contáctenos</p>
-                <p>Sobre nosotros</p>
-                <p>Devoluciones</p>
-                <p>Privacidad</p>
-            </div>
-            <div class="third-info">
-                <h4>Tienda</h4>
-                <p>Ropa para hombre</p>
-                <p>Ropa para mujer</p>
-            </div>
-            <div class="fourth-info">
-                <h4>Compañía</h4>
-                <p>Blog</p>
-                <p>Unetenos</p>
-                <p>Login</p>
             </div>
         </div>
     </section>
